cluster/apps/networking/traefik/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: networking
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 5001
